Icon Cutoff Fix

--- a/src/qt/res/css/default.css
+++ b/src/qt/res/css/default.css
@@ -114,7 +114,6 @@ QMessageBox {
     padding-right: 25px;
     padding-top: 5px;
     padding-bottom: 5px;
-    margin-right: 10px;
     }
     
     QPushButton:hover {
